<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_bag_analysis</name>
  <version>0.0.0</version>
  <description>CPP custom bag reader</description>
  <maintainer email="macar@todo.todo">macar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpp</depend>
  <depend>rosbag2_transport</depend>
  <depend>turtlesim</depend>
  <depend>rosbag2_cpp</depend>
  <depend>sensor_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
